# backend-playground

./: .gitignore  Dockerfile  README.md  compose.yaml  justfile  mkdocs.yml  pyproject.toml
.github/actions/setup-workspace/: action.yaml
.github/workflows/: docs.yaml  integration-test.yaml  pre-commit.yaml  testing.yaml
api/: __init__.py  main.py  service.py
api/routes/: __init__.py
app/: __init__.py  main.py  service.py
app/core/: service.py
app/routes/v0/: __init__.py  routes.py
docs/: index.md
migrations/: 001_create_mock_data.sql
tests/: conftest.py  test_api.py
