[tool.poetry]
name = "backend-playground"
version = "0.1.0"
description = "Virtual playground for backend learning"
authors = ["Chino Franco <chino.franco@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.38"
asyncpg = "^0.30.0"
alembic = "^1.14.1"
pydantic-settings = "^2.7.1"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.6"


[tool.poetry.group.dev.dependencies]
poetry = "^2.0.1"
black = "^25.1.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
httpx = "^0.28.1"
isort = "^6.0.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
